--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -1,18 +1,110 @@
-<p>products works!</p>
-<div class="container">
-  <div
-    class="card"
-    *ngFor="let item of products"
-    style="width: 18rem; display: inline-block; margin: 0 1rem"
-  >
-    <img src="{{ item.image }}" class="card-img-top" />
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">
-        Some quick example text to build on the card title and make up the bulk
-        of the card's content.
-      </p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+<button
+  type="button"
+  class="btn btn-primary"
+  data-toggle="modal"
+  data-target="#exampleModalCenter"
+>
+  ADD
+</button>
+<table class="table container mt-4">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">image</th>
+      <th scope="col">status</th>
+      <th scope="col">price</th>
+      <th scope="col"></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let item of productClone">
+      <th scope="row">{{ item.id }}</th>
+      <td><img src="{{ item.image }}" alt="" style="width: 2rem" /></td>
+      <td>{{ item.status ? "Con" : "Het" }}</td>
+      <td>{{ item.price }}</td>
+      <td>
+        <div (click)="handleRemove(item.id)" class="btn btn-danger">Remove</div>
+      </td>
+    </tr>
+  </tbody>
+</table>
+<div
+  class="modal fade show"
+  id="exampleModalLong"
+  tabindex="-1"
+  role="dialog"
+  aria-labelledby="exampleModalLongTitle"
+  aria-hidden="true"
+  style="display: block"
+>
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+        <button
+          type="button"
+          class="close"
+          data-dismiss="modal"
+          aria-label="Close"
+        >
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form
+          #fromProduct="ngForm"
+          (ngSubmit)="onSubmit(fromProduct)"
+          novalidate
+        >
+          <div class="form-group">
+            <label for="exampleInputEmail1">Id</label>
+            <input
+              type="text"
+              ngModel
+              class="form-control"
+              name="id"
+              #image="ngModel"
+            />
+          </div>
+          <div class="form-group">
+            <label for="exampleInputEmail1">image</label>
+            <input
+              type="text"
+              ngModel
+              class="form-control"
+              name="image"
+              #image="ngModel"
+            />
+          </div>
+          <div class="form-group">
+            <label for="exampleInputPassword1">status</label>
+            <input
+              type="text"
+              ngModel
+              class="form-control"
+              name="status"
+              #status="ngModel"
+            />
+          </div>
+          <div class="form-group">
+            <label for="exampleInputPassword1">price</label>
+            <input
+              type="text"
+              ngModel
+              class="form-control"
+              name="price"
+              #price="ngModel"
+            />
+          </div>
+          <button class="btn btn-primary">Submit</button>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">
+          Close
+        </button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
     </div>
   </div>
 </div>
