--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -1,11 +1,4 @@
-<button
-  type="button"
-  class="btn btn-primary"
-  data-toggle="modal"
-  data-target="#exampleModalCenter"
->
-  ADD
-</button>
+<button type="button" class="btn btn-primary" (click)="show()">ADD</button>
 <table class="table container mt-4">
   <thead>
     <tr>
@@ -24,87 +17,12 @@
       <td>{{ item.price }}</td>
       <td>
         <div (click)="handleRemove(item.id)" class="btn btn-danger">Remove</div>
+        <div (click)="handleView(item)" class="btn btn-primary">View</div>
       </td>
     </tr>
   </tbody>
 </table>
-<div
-  class="modal fade show"
-  id="exampleModalLong"
-  tabindex="-1"
-  role="dialog"
-  aria-labelledby="exampleModalLongTitle"
-  aria-hidden="true"
-  style="display: block"
->
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
-        <button
-          type="button"
-          class="close"
-          data-dismiss="modal"
-          aria-label="Close"
-        >
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <form
-          #fromProduct="ngForm"
-          (ngSubmit)="onSubmit(fromProduct)"
-          novalidate
-        >
-          <div class="form-group">
-            <label for="exampleInputEmail1">Id</label>
-            <input
-              type="text"
-              ngModel
-              class="form-control"
-              name="id"
-              #image="ngModel"
-            />
-          </div>
-          <div class="form-group">
-            <label for="exampleInputEmail1">image</label>
-            <input
-              type="text"
-              ngModel
-              class="form-control"
-              name="image"
-              #image="ngModel"
-            />
-          </div>
-          <div class="form-group">
-            <label for="exampleInputPassword1">status</label>
-            <input
-              type="text"
-              ngModel
-              class="form-control"
-              name="status"
-              #status="ngModel"
-            />
-          </div>
-          <div class="form-group">
-            <label for="exampleInputPassword1">price</label>
-            <input
-              type="text"
-              ngModel
-              class="form-control"
-              name="price"
-              #price="ngModel"
-            />
-          </div>
-          <button class="btn btn-primary">Submit</button>
-        </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">
-          Close
-        </button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
+<app-add-product [show]="show()" (newItem)="onSubmit($event)"></app-add-product>
+<div *ngIf="product">
+  <app-product-item [data]="product"></app-product-item>
 </div>
