--- a/src/app/components/layouts/layout-public/layout-public.component.html
+++ b/src/app/components/layouts/layout-public/layout-public.component.html
@@ -21,7 +21,7 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/question">Question</a>
+            <a class="nav-link" routerLink="/questions">Question</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
