--- a/src/app/pages/question-page/question-page.component.html
+++ b/src/app/pages/question-page/question-page.component.html
@@ -1,7 +1,7 @@
 <div
-  class="d-flex flex-row mb-3 justify-content-evenly align-items-center flex-wrap"
+  class="d-flex flex-row mb-3 justify-content-between align-items-center flex-wrap"
 >
-  <div class="card" *ngFor="let subject of subjects" style="width: 18rem">
+  <div class="card my-4" *ngFor="let subject of subjects" style="width: 18rem">
     <img
       src="{{ subject.icon }}"
       class="card-img-top"
@@ -13,8 +13,10 @@
         Some quick example text to build on the card title and make up the bulk
         of the card's content.
       </p>
-      <a routerLink="{{ subject.id }}" class="btn btn-primary">Go test</a>
+      <div class="d-flex justify-content-between">
+        <a routerLink="{{ subject.slug }}" class="btn btn-primary">Go test</a>
+        <button class="btn btn-primary">Subscribe</button>
+      </div>
     </div>
   </div>
 </div>
-<app-quizzes-page></app-quizzes-page>
