--- a/src/app/pages/quizzes-page/quizzes-page.component.html
+++ b/src/app/pages/quizzes-page/quizzes-page.component.html
@@ -1,1 +1,26 @@
-<p>quizzes-page works!</p>
+<div
+  class="d-flex justify-content-center align-items-center"
+  style="height: 50vh"
+>
+  <form
+    style="min-width: 40%"
+    class="d-flex flex-column justify-content-center align-items-center"
+    #setNamePlayer="ngForm"
+    (submit)="handePayler(setNamePlayer)"
+  >
+    <div class="mb-3">
+      <input
+        type="text"
+        class="form-control form-control-lg"
+        placeholder="User name ..."
+        #userName
+        name="userName"
+        ngModel
+      />
+    </div>
+    <button type="submit" class="btn btn-primary">Start</button>
+  </form>
+</div>
+<div *ngIf="players != null">
+  {{ players | json }}
+</div>
