--- a/src/app/pages/admin/questions/manager-question/manager-question.component.html
+++ b/src/app/pages/admin/questions/manager-question/manager-question.component.html
@@ -1,1 +1,138 @@
-<a routerLink="add-question" class="btn btn-primary">Add question</a>
+<div class="container my-4">
+  <!-- <a routerLink="add-question" class="btn btn-primary">Add question</a> -->
+
+  <form #addSubject="ngForm">
+    <nz-modal
+      [(nzVisible)]="isVisible"
+      nzTitle="The first Modal"
+      (nzOnCancel)="handleCancel()"
+      (nzOnOk)="handleOk(addSubject)"
+    >
+      <ng-container *nzModalContent>
+        <div class="form-group">
+          <label>Title</label>
+          <input
+            type="text"
+            class="form-control"
+            name="titleSubject"
+            #titleSubject="ngModel"
+            ngModel
+          />
+        </div>
+        <div class="form-group">
+          <label>Avatar</label>
+          <input
+            type="file"
+            class="form-control"
+            name="avatar"
+            #avatar="ngModel"
+            ngModel
+          />
+        </div>
+      </ng-container>
+    </nz-modal>
+  </form>
+  <div class="col-12">
+    <button
+      nz-button
+      nzType="primary"
+      class="btn btn-primary"
+      (click)="showModal()"
+    >
+      <span>Add</span>
+    </button>
+    <nz-table #subjectTable [nzData]="subjects">
+      <thead>
+        <tr>
+          <th nzWidth="25%">Tieu de</th>
+          <th nzWidth="15%">Avatar</th>
+          <th nzWidth="40%">Cau hoi</th>
+          <th>Action</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let data of subjectTable.data">
+          <ng-container *ngIf="!editCache[data.id].edit; else editTemplate">
+            <td>{{ data.name }}</td>
+            <td>{{ data.icon }}</td>
+            <td>10</td>
+            <td>
+              <a (click)="startEdit(data.id)">Edit</a> --
+              <a
+                nz-popconfirm
+                nzPopconfirmTitle="Sure to delete?"
+                (nzOnConfirm)="startDelete(data.id)"
+                class="text-danger"
+                >Delete</a
+              >
+            </td>
+          </ng-container>
+          <ng-template #editTemplate>
+            <td>
+              <input
+                type="text"
+                nz-input
+                [(ngModel)]="editCache[data.id].data.name"
+              />
+            </td>
+            <td>
+              <input
+                type="text"
+                nz-input
+                [(ngModel)]="editCache[data.id].data.age"
+              />
+            </td>
+            <td>
+              <input
+                type="text"
+                nz-input
+                [(ngModel)]="editCache[data.id].data.address"
+              />
+            </td>
+            <td>
+              <a (click)="saveEdit(data.id)" class="save">Save</a>
+              <a
+                nz-popconfirm
+                nzPopconfirmTitle="Sure to cancel?"
+                (nzOnConfirm)="cancelEdit(data.id)"
+                >Cancel</a
+              >
+            </td>
+          </ng-template>
+          <ng-template #deleteTemplate>
+            <td>
+              <input
+                type="text"
+                nz-input
+                [(ngModel)]="editCache[data.id].data.name"
+              />
+            </td>
+            <td>
+              <input
+                type="text"
+                nz-input
+                [(ngModel)]="editCache[data.id].data.age"
+              />
+            </td>
+            <td>
+              <input
+                type="text"
+                nz-input
+                [(ngModel)]="editCache[data.id].data.address"
+              />
+            </td>
+            <td>
+              <a (click)="saveEdit(data.id)" class="save">Save</a>
+              <a
+                nz-popconfirm
+                nzPopconfirmTitle="Sure to cancel?"
+                (nzOnConfirm)="cancelEdit(data.id)"
+                >Cancel</a
+              >
+            </td>
+          </ng-template>
+        </tr>
+      </tbody>
+    </nz-table>
+  </div>
+</div>
