--- a/src/app/components/layouts/dashboard/dashboard.component.html
+++ b/src/app/components/layouts/dashboard/dashboard.component.html
@@ -48,7 +48,8 @@
           role="button"
           data-bs-toggle="dropdown"
           aria-expanded="false"
-          ><i class="fas fa-user fa-fw"></i
+        >
+          <i class="fas fa-user fa-fw"> </i
         ></a>
         <ul
           class="dropdown-menu dropdown-menu-end"
@@ -88,7 +89,7 @@
             aria-expanded="false"
           >
             <img
-              src="https://github.com/mdo.png"
+              src="https://github.cosm/mdo.png"
               alt=""
               width="32"
               height="32"
