--- a/src/app/pages/admin/questions/add-question/add-question.component.html
+++ b/src/app/pages/admin/questions/add-question/add-question.component.html
@@ -6,6 +6,9 @@
           <li class="breadcrumb-item">
             <a routerLink="/admin/questions" class="text-dark">Questions</a>
           </li>
+          <li class="breadcrumb-item">
+            <a (click)="handleBack()" class="text-dark">List question</a>
+          </li>
           <li class="breadcrumb-item active" aria-current="page">
             Add question
           </li>
@@ -24,8 +27,8 @@
             class="form-control"
             placeholder="Leave a comment here"
             style="min-height: 200px"
-            [(ngModel)]="question.quizz"
-            name="quizz"
+            [(ngModel)]="question.quiz"
+            name="quiz"
           ></textarea>
           <label for="floatingTextarea">Please add question ... 🤔?</label>
         </div>
@@ -39,9 +42,11 @@
               <div class="quiz_card_area">
                 <input
                   class="quiz_checkbox"
-                  type="checkbox"
+                  type="radio"
                   id="{{ item.id }}"
-                  [checked]="item.status"
+                  name="{{ item.id }}"
+                  [value]="true"
+                  [(ngModel)]="item.status"
                 />
                 <div class="single_quiz_card">
                   <div class="quiz_card_content">
