feat: login, signup

--- a/src/app/components/layouts/layout-public/layout-public.component.html
+++ b/src/app/components/layouts/layout-public/layout-public.component.html
@@ -34,6 +34,10 @@
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
       </div>
+      <app-sign-in></app-sign-in>
+      <!-- Sign up start -->
+      <app-sign-up></app-sign-up>
+      <!-- Sign up end -->
     </div>
   </nav>
 </header>
