--- a/src/app/components/layouts/layout-public/layout-public.component.html
+++ b/src/app/components/layouts/layout-public/layout-public.component.html
@@ -34,10 +34,58 @@
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
       </div>
-      <app-sign-in></app-sign-in>
-      <!-- Sign up start -->
-      <app-sign-up></app-sign-up>
-      <!-- Sign up end -->
+      <div *ngIf="!isUser; then actionBtn; else userName"></div>
+      <ng-template #actionBtn>
+        <app-sign-in (isLogin)="handlerLogin($event)"></app-sign-in>
+        <!-- Sign up start -->
+        <app-sign-up></app-sign-up>
+        <!-- Sign up end -->
+      </ng-template>
+      <ng-template #userName>
+        <button
+          class="btn"
+          nz-button
+          nz-dropdown
+          nzTrigger="click"
+          [nzDropdownMenu]="menu"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="16"
+            height="16"
+            fill="currentColor"
+            class="bi bi-person"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"
+            />
+          </svg>
+          <i nz-icon nzType="down"></i>
+        </button>
+        <nz-dropdown-menu #menu="nzDropdownMenu">
+          <ul nz-menu>
+            <li nz-menu-item>1st menu item</li>
+            <li nz-menu-item>2nd menu item</li>
+            <li nz-menu-divider></li>
+            <li nz-submenu nzTitle="Account">
+              <ul>
+                <li nz-menu-item>Profile</li>
+                <li
+                  nz-menu-item
+                  nz-popconfirm
+                  nzPopconfirmTitle="Are you sure?"
+                  nzOkText="ok"
+                  nzCancelText="cancel"
+                  (nzOnConfirm)="handlerSignOut()"
+                >
+                  Log out
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </nz-dropdown-menu>
+      </ng-template>
     </div>
   </nav>
 </header>
