--- a/src/app/components/layouts/layout-public/layout-public.component.html
+++ b/src/app/components/layouts/layout-public/layout-public.component.html
@@ -24,15 +24,9 @@
             <a class="nav-link" routerLink="/questions">Subjects</a>
           </li>
         </ul>
-        <form class="d-flex" role="search">
-          <input
-            class="form-control me-2"
-            type="search"
-            placeholder="Search"
-            aria-label="Search"
-          />
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
+        <!-- Search -->
+        <app-search></app-search>
+        <!-- Search -->
       </div>
       <div *ngIf="!isUser; then actionBtn; else userName"></div>
       <ng-template #actionBtn>
