--- a/src/app/components/layouts/dashboard/dashboard.component.html
+++ b/src/app/components/layouts/dashboard/dashboard.component.html
@@ -1,7 +1,10 @@
 <div class="sb-nav-fixed">
-  <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
+  <nav
+    class="sb-topnav navbar navbar-expand navbar-dark bg-dark"
+    style="z-index: 5"
+  >
     <!-- Navbar Brand-->
-    <a class="navbar-brand ps-3" href="index.html">Dashboard</a>
+    <!--  <a class="navbar-brand ps-3" href="index.html">Dashboard</a> -->
     <!-- Sidebar Toggle-->
     <button
       class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0"
