--- a/src/app/pages/admin/questions/list-question/list-question.component.html
+++ b/src/app/pages/admin/questions/list-question/list-question.component.html
@@ -13,7 +13,7 @@
   <h2>{{ question?.name }} -({{ question?.questions?.length }})</h2>
   <button
     routerLink="/admin/questions/add-question/{{ question.id }}"
-    class="btn btn-primary"
+    class="btn btn-primary mb-4"
   >
     Add
   </button>
@@ -26,22 +26,39 @@
       [nzDisabled]="panel.disabled"
       [nzExtra]="extraLS"
     >
+      <div class="d-flex justify-content-end align-items-center mb-4">
+        <a
+          nz-popconfirm
+          nzPopconfirmTitle="Are you sure?"
+          nzOkText="ok"
+          nzCancelText="cancel"
+          (nzOnConfirm)="confirm(panel.id)"
+          nzPopconfirmPlacement="topRight"
+          (click)="$event.stopPropagation()"
+        >
+          <i
+            nz-icon
+            nzType="delete"
+            nzTheme="outline"
+            style="color: #ff0000"
+          ></i>
+        </a>
+
+        <a
+          routerLink="/admin/questions/edit-question/{{ panel.id }}"
+          class="mx-4"
+        >
+          <i nz-icon nzType="edit" nzTheme="outline"></i>
+        </a>
+      </div>
+
       <ul nz-list [nzDataSource]="panel.answers" nzBordered nzSize="large">
         <li
           nz-list-item
           *ngFor="let item of panel.answers; index as i; first as isFirst"
           nzNoFlex
         >
-          <ul nz-list-item-actions>
-            <nz-list-item-action>
-              <a
-                routerLink="/admin/questions/edit-question/{{ panel.id }}"
-                class="mx-4"
-              >
-                <i nz-icon nzType="edit" nzTheme="outline"></i>
-              </a>
-            </nz-list-item-action>
-          </ul>
+          <ul nz-list-item-actions></ul>
           <div class="d-flex justify-content-start align-items-center">
             <span class="{{ item.status ? 'green' : 'red' }}"> </span>
             <span class="content">
@@ -54,20 +71,5 @@
   </nz-collapse>
 </div>
 <ng-template #extraLS>
-  <a
-    nz-popconfirm
-    nzPopconfirmTitle="Are you sure?"
-    nzOkText="ok"
-    nzCancelText="cancel"
-    (nzOnConfirm)="confirm()"
-    (nzOnCancel)="cancel()"
-    nzPopconfirmPlacement="topRight"
-    (click)="$event.stopPropagation()"
-  >
-    <i nz-icon nzType="delete" nzTheme="outline" style="color: #ff0000"></i>
-  </a>
-
-  <!-- <a (click)="$event.stopPropagation()" class="mx-4">
-    <i nz-icon nzType="edit" nzTheme="outline"></i>
-  </a> -->
+  <!-- -->
 </ng-template>
