--- a/src/app/pages/question-page/question-page.component.html
+++ b/src/app/pages/question-page/question-page.component.html
@@ -14,8 +14,7 @@
         of the card's content.
       </p>
       <div class="d-flex justify-content-between">
-        <a routerLink="{{ subject.slug }}" class="btn btn-primary">Go test</a>
-        <button class="btn btn-primary">Subscribe</button>
+        <a routerLink="{{ subject.id }}" class="btn btn-primary">Go test</a>
       </div>
     </div>
   </div>
