--- a/src/app/pages/quizzes-page/quizzes-page.component.html
+++ b/src/app/pages/quizzes-page/quizzes-page.component.html
@@ -24,4 +24,66 @@
     </form>
   </div>
 </ng-template>
-<ng-template #start>{{ players }} </ng-template>
+<ng-template #start
+  >{{ players }}
+
+  <div class="mx-auto p-5" style="width: 500px">
+    <ng-container
+      *ngIf="
+        currentQuiz == data?.questions?.length;
+        then complete;
+        else content
+      "
+    ></ng-container>
+  </div>
+</ng-template>
+<ng-template #content>
+  <div nz-row>
+    <div nz-col nzSpan="12" class="mx-auto">
+      <h2>{{ data?.questions[this.currentQuiz]?.quiz }}</h2>
+    </div>
+  </div>
+  <div
+    nz-row
+    class="header d-flex justify-content-between align-items-center my-3"
+  >
+    <!-- <i nz-icon nzType="left" nzTheme="outline" style="cursor: pointer"></i> -->
+    <p class="text-center">
+      {{ currentQuiz + 1 }} of
+      {{ data?.questions?.length }}
+    </p>
+    <!-- <i nz-icon nzType="right" nzTheme="outline" style="cursor: pointer"></i> -->
+  </div>
+  <div nz-row>
+    <!-- result -->
+    <div
+      class="box-result border mb-2 p-3 rounded-3"
+      *ngFor="let item of data?.questions[this.currentQuiz]?.answers"
+      appBackground
+      [correctAnswer]="item.status"
+    >
+      <div class="form-group form-check d-flex align-items-center">
+        <label class="form-check-label" for="exampleCheck{{ item.id }}"></label>
+        <div class="d-flex align-items-center">
+          <input
+            type="radio"
+            class="form-check-input me-4"
+            id="exampleCheck{{ item.id }}"
+            (change)="onAnswer(item.status)"
+            name="option"
+          />
+          <span class="text-xl">{{ item.id }}</span>
+        </div>
+      </div>
+    </div>
+  </div>
+</ng-template>
+<ng-template #complete>
+  <div class="d-flex flex-column justify-content-between">
+    <ul>
+      <li>Correct: {{ correct$.getValue() }}</li>
+      <li>InCorrect: {{ inCorrect$.getValue() }}</li>
+    </ul>
+    <button class="btn btn-primary">Start Over</button>
+  </div>
+</ng-template>
